@@ -1,3 +1,10 @@
+Sun Apr 04 16:35:38 2004  George Lebl <jirka@5z.com>
+
+	* src/genius.c, src/gnome-genius.c: Make the console version be
+	  translated though there are still utf-8 issues.  Also the welcome
+	  string is now slightly different since gettext seemed to have a fit
+	  with the escapes and all that.
+
 Sun Apr 04 15:52:00 2004  George Lebl <jirka@5z.com>
 
 	* src/calc.[ch], eval.c, src/funclib.c, src/graphing.c, src/matop.c,
